# rs-log-tag-json-keywords2ids

./: Cargo.toml  README.md  rs-log-tag-json-keywords2ids  run.sh
src/: lib.rs  main.rs  words2ids.rs
src/words2ids/: aho.rs
src/words2ids/aho/: corasick.rs
