[package]
name = "rs-log-tag-json-keywords2ids"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 2
codegen-units = 16

[dependencies.aho-corasick]
version = "1.1.3"
default-features = false
features = [
	"perf-literal",
	"std",
]

[dependencies.serde_json]
version = "1.0.138"
default-features = false
features = [
	"std",
]
